0.9
- added the ability to detect handheld devices (a browser that does not support css2 is considered handheld)
- new library (phpSniff) to detect Internet Explorer
- optimized output HTML, ~20% lighter

0.8
- changed P4A_MESSAGE layout
- fixed fieldset ie bug
- fixed deleteRow method on P4A_DATA_SOURCE
- fixed screen.css in default theme
- fixed anchorCenter bug in P4A_FRAME
- fixed anchorCenter bug in P4A_FIELDSET
- fixed an error P4A_FIELD::setNewValue that prevented the system from handling 0 as numeric value

0.7
- code cleanup
- added P4A_Navigation_Toolbar, a new default toolbar with "first", "prev", "next", "last", "exit" buttons
- updated TODO
- various bugfixes

0.6
- renamed changelog to CHANGELOG
- added TODO file
- added setlocale(LC_NUMERIC, "C") to avoid php 4.3.10 problems with numeric locales
- added setlocale(LC_MONETARY, "C") to avoid php 4.3.10 problems with numeric locales
- fixed P4A_TOOLBAR, now spacers work correctly
- fixed P4A_IMAGE, now supports the new default icon path
- added spacer.png image into icons
- DATA_SOURCE::getAsCSV() now suports fields names
- renamed DATA_SOURCE::exportToCSV() to DATA_SOURCE::exportAsCSV()
- added DATA_SOURCE::exportToCSV() as an alias of DATA_SOURCE::exportAsCSV()

0.5
- fixed a file upload bug that prevented a correct behaviour when the web server is listening on a port differt from 80
- fixed a bug in DATA_SOURCE filters engine
- added a message to MySQL Manager to suggest using Firefox
- fixed a bug in ARRAY_SOURCE getAll
- fixed a bug in ARRAY_SOURCE load

0.4
- removed pear/pear.php that caused errors on windows installation
- fixed various errors in array_source
- fixed a reference in frame
- various bugfixes

0.3
- changed PEAR repository management, now with web interface we can easily install/upgrade/remove PEAR modules
- added deleteRow to DATA_SOURCE interface
- added deleteRow to ARRAY_SOURCE
- moved some code for deleteRow from DB_SOURCE to DATA_SOURCE, now used also from ARRAY_SOURCE

0.2