@@ -1,7 +1,9 @@
 0.9
+- all javascript moved in p4a.js, the default form is now named "p4a"
+- fixed a bug in mask default template, no javascript wan included
 - added the ability to detect handheld devices (a browser that does not support css2 is considered handheld)
 - new library (phpSniff) to detect Internet Explorer
-- optimized output HTML, ~20% lighter
+- optimized output HTML, cleaner and lighter
 
 0.8
 - changed P4A_MESSAGE layout
